<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#540115"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/fsu_spearit_player"
        android:textColor="#a89c70"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_war_chant"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#c2c2c2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/war_chant" />

    <Button
        android:id="@+id/btn_fight_song"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/fsu_fight_song" />

    <Button
        android:id="@+id/btn_victory_song"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/fsu_victory_song" />

    <Button
        android:id="@+id/btn_garnet_gold"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/garnet_and_gold" />

    <Button
        android:id="@+id/btn_cheer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/fsu_cheer" />

    <Button
        android:id="@+id/btn_fourth_fanfare"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/_4th_quarter_fanfare" />

    <Button
        android:id="@+id/btn_uprising"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2C2C2"
        android:drawableStart="@drawable/img_play"
        android:text="@string/seminole_uprising" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cur_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_0_min_0_sec"
            android:textAlignment="center"
            android:textColor="#A89C70" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textviewcenter"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0_min_0_sec"
            android:textAlignment="center"
            android:textColor="#A89C70" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A89C70"
            android:drawableStart="@drawable/img_stop"
            android:text="@string/stop"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A89C70"
            android:drawableStart="@drawable/img_pause"
            android:text="@string/pause"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A89C70"
            android:drawableStart="@drawable/img_play"
            android:text="@string/play"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/cs_logo50"
        android:onClick="open"/>

</LinearLayout>